charts/manyfold/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  labels:
    app.kubernetes.io/name: manyfold
spec:
  selector:
    matchLabels:
      app: manyfold
      app.kubernetes.io/name: manyfold
  template:
    metadata:
      labels:
        app: manyfold
        app.kubernetes.io/name: manyfold
    spec:
      containers:
        - name: manyfold
          image: manyfold3d/manyfold
          ports:
            - containerPort: 3214
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
